modified:   .gitmodules 	modified:   bash/bashrc 	modified:   bin/auto_config.sh 	modified:   bin/binstr2ASCII.py 	new file:   bin/git-submodule-rm.sh 	modified:   vim/bundle/snipmate 	modified:   vim/bundle/snipmate (untracked content) 	modified:   vim/bundle/taglist (untracked content) 	modified:   vim/vimrc

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,9 +7,9 @@
 [submodule "vim/bundle/RST-Tables"]
 	path = vim/bundle/RST-Tables
 	url = git://github.com/vim-scripts/RST-Tables.git
-[submodule "vim/bundle/snipmate"]
-	path = vim/bundle/snipmate
-	url = git://github.com/msanders/snipmate.vim.git
 [submodule "vim/bundle/zencoding"]
 	path = vim/bundle/zencoding
 	url = git://github.com/mattn/zencoding-vim.git
+[submodule "vim/bundle/snipmate"]
+	path = vim/bundle/snipmate
+	url = git://github.com/hecor/snipmate.vim.git
