--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "vim/bundle/closetag"]
 	path = vim/bundle/closetag
-	url = git://github.com/docunext/closetag.vim.git
+	url = https://github.com/docunext/closetag.vim.git
 [submodule "vim/bundle/taglist"]
 	path = vim/bundle/taglist
-	url = git://github.com/vim-scripts/taglist.vim.git
+	url = https://github.com/vim-scripts/taglist.vim.git
 [submodule "vim/bundle/RST-Tables"]
 	path = vim/bundle/RST-Tables
-	url = git://github.com/vim-scripts/RST-Tables.git
+	url = https://github.com/vim-scripts/RST-Tables.git
 [submodule "vim/bundle/zencoding"]
 	path = vim/bundle/zencoding
-	url = git://github.com/mattn/zencoding-vim.git
+	url = https://github.com/mattn/zencoding-vim.git
 [submodule "vim/bundle/snipmate"]
 	path = vim/bundle/snipmate
-	url = git://github.com/hecor/snipmate.vim.git
+	url = https://github.com/hecor/snipmate.vim.git
